# muster

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPIKE.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
design/: prototype.html
sandbox/: README.md
src/: diff.ts  main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  SIGNING.md  tauri.conf.json  tauri.signing.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tasks.rs
test/: diff.test.ts
