[package]
name = "muster"
version = "0.1.0"
description = "A launcher/manager for many Claude Code sessions"
authors = ["Respeak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "muster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
tiny_http = "0.12.0"
base64 = "0.22.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
toml = "0.9"
jsonc-parser = { version = "0.33.0", features = ["serde"] }

