[package]
name = "muster"
version = "0.1.0"
description = "A launcher/manager for many Claude Code sessions"
authors = ["Respeak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "muster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
tiny_http = "0.12.0"
base64 = "0.22.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Runnable discovery: .muster/tasks.toml, and format-preserving writes back to it.
toml = "0.9"
toml_edit = "0.25.13"
# .vscode/tasks.json and launch.json are JSONC — VS Code's own template ships
# comments and trailing commas, which serde_json rejects.
jsonc-parser = { version = "0.33.0", features = ["serde"] }
# Crash forensics: rolling file log + panic hook. The app previously wrote no
# logs at all — a panic that unwound out of main left zero trace on disk.
log = "0.4"
tauri-plugin-log = "2"
# Process-table introspection (external-session liveness + ancestry) without
# spawning `ps`/`tasklist` — one in-process snapshot, same code on every OS.
# 0.38 (not latest) because newer sysinfo raises MSRV past our rustc.
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

# `SetThreadExecutionState` for the keep-awake control — Windows' answer to
# macOS `caffeinate`. 0.61 is the version tauri already resolves, so this adds
# a feature to an existing crate rather than a second copy of windows-sys.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Power"] }

